--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -186,7 +186,7 @@ hr.small {
     width: 100%;
     height: 600px;
     color: #fff;
-    background: url(../img/ireland.JPG) no-repeat center center scroll;
+    background: url(../img/ireland.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -198,7 +198,7 @@ hr.small {
     width: 100%;
     height: 600px;
     color: #fff;
-    background: url(../img/burma.JPG) no-repeat center center scroll;
+    background: url(../img/burma.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
